[gd_scene load_steps=3 format=3 uid="uid://fowhwqjj15qh"]

[ext_resource type="Theme" uid="uid://df2r57b2stnof" path="res://themes/ui.tres" id="1_hsqp7"]
[ext_resource type="Script" uid="uid://bnwp1x2ol3q8o" path="res://scenes/leaderboard/leaderboard_entry.gd" id="2_b48f7"]

[node name="LeaderboardEntry" type="PanelContainer"]
anchors_preset = -1
offset_right = 532.0
offset_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_hsqp7")
theme_type_variation = &"LightPanel"
script = ExtResource("2_b48f7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Rank" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "#1"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerName" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "fdsfsdfsdffsdsdffsdfsdsdffsdfsdfsd"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Score" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "END_SCREEN_SCORE_COUNTER"

[node name="Riskiness" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "END_SCREEN_SCORE_COUNTER"

[node name="MostWeightStat" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "END_SCREEN_SCORE_COUNTER"
